2014-07-24  Mihnea Ovidenie  <mihnea@adobe.com>

        [New Multicolumn] Assertion failure when an input element has multicolumn style
        https://bugs.webkit.org/show_bug.cgi?id=135234

        Reviewed by Andrei Bucur.

        Restrict the assertion in RenderBlock::canComputeRegionRangeForBox
        only to RenderNamedFlowThread objects since for RenderMultiColumnFlowThread
        objects we can compute a range of regions during their parent block layout.   

        Test: fast/multicol/newmulticol/input-as-multicol.html

        * rendering/RenderBlock.cpp:
        (WebCore::canComputeRegionRangeForBox):

2014-07-23  Jeremy Jones  <jeremyj@apple.com>

        Transparent fullscreen background when video is not present.
        https://bugs.webkit.org/show_bug.cgi?id=135226

        Reviewed by Simon Fraser.

        Set background to black just before beginning the animation to fullscreen.

        * platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
        (WebVideoFullscreenInterfaceAVKit::enterFullscreen): set background color black.

2014-07-23  Joseph Pecoraro  <pecoraro@apple.com>

        ScriptController::updateDocument ASSERT mutating map while iterating map
        https://bugs.webkit.org/show_bug.cgi?id=135211

        Reviewed by Oliver Hunt.

        Avoid iterating over m_windowShells in more places. This prevents
        the possibility of a collection during JSC allocation which might
        cause a mutation to m_windowShells (HTMLMediaElement destruction).

        Have ScriptController defriend ScriptCachedFrameData by providing
        a getter for the list of window shells.

        * bindings/js/ScriptCachedFrameData.cpp:
        (WebCore::ScriptCachedFrameData::ScriptCachedFrameData):
        (WebCore::ScriptCachedFrameData::restore):
        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::windowShells):
        (WebCore::ScriptController::clearWindowShell):