@@ -2962,6 +2962,17 @@ _wkSetRequestStorageSession
 __ZN7WebCore14ResourceHandle25continueWillCacheResponseEP19NSCachedURLResponse
 #endif
 
+#if USE(CONTENT_FILTERING)
+__ZN7WebCore13ContentFilter6decodeEP17NSKeyedUnarchiverRS0_
+__ZN7WebCore13ContentFilterC1Ev
+__ZN7WebCore13ContentFilterD1Ev
+__ZNK7WebCore13ContentFilter6encodeEP15NSKeyedArchiver
+#endif
+
+#if USE(CONTENT_FILTERING) && PLATFORM(IOS)
+__ZN7WebCore13ContentFilter43handleUnblockRequestAndDispatchIfSuccessfulERKNS_15ResourceRequestENSt3__18functionIFvvEEE
+#endif
+
 #if ENABLE(CONTEXT_MENUS)
 __ZN7WebCore11ContextMenu22setPlatformDescriptionEP14NSMutableArray
 __ZN7WebCore12EventHandler20sendContextMenuEventERKNS_18PlatformMouseEventE
@@ -3464,14 +3475,4 @@ __ZN7WebCore9PageGroup18captionPreferencesEv
 
 #if ENABLE(VIEW_MODE_CSS_MEDIA)
 __ZN7WebCore4Page11setViewModeENS0_8ViewModeE
-#endif
-
-#if USE(CONTENT_FILTERING)
-#if PLATFORM(IOS)
-__ZN7WebCore13ContentFilter43handleUnblockRequestAndDispatchIfSuccessfulERKNS_15ResourceRequestENSt3__18functionIFvvEEE
-#endif
-__ZN7WebCore13ContentFilter6decodeEP17NSKeyedUnarchiverRS0_
-__ZN7WebCore13ContentFilterC1Ev
-__ZN7WebCore13ContentFilterD1Ev
-__ZNK7WebCore13ContentFilter6encodeEP15NSKeyedArchiver
 #endif
