@@ -1,3 +1,12 @@
+2014-07-24  Tibor Meszaros  <tmeszaros.u-szeged@partner.samsung.com>
+
+        Sort WebCore.exp.in after r171252
+        https://bugs.webkit.org/show_bug.cgi?id=135239
+
+        Reviewed by Csaba Osztrogonác.
+
+        * WebCore.exp.in:
+
 2014-07-24  Mihnea Ovidenie  <mihnea@adobe.com>
 
         [New Multicolumn] Assertion failure when an input element has multicolumn style
